[gd_scene load_steps=29 format=2]

[ext_resource path="res://asset/Enemy02/walk05.png" type="Texture" id=1]
[ext_resource path="res://asset/Enemy02/walk08.png" type="Texture" id=2]
[ext_resource path="res://asset/Enemy02/walk07.png" type="Texture" id=3]
[ext_resource path="res://asset/Enemy02/walk06.png" type="Texture" id=4]
[ext_resource path="res://asset/Enemy02/idle02.png" type="Texture" id=5]
[ext_resource path="res://asset/Enemy02/idle03.png" type="Texture" id=6]
[ext_resource path="res://asset/Enemy02/idle05.png" type="Texture" id=7]
[ext_resource path="res://asset/Enemy02/idle01.png" type="Texture" id=8]
[ext_resource path="res://asset/Enemy02/idle04.png" type="Texture" id=9]
[ext_resource path="res://asset/Enemy02/idle07.png" type="Texture" id=10]
[ext_resource path="res://asset/Enemy02/idle10.png" type="Texture" id=11]
[ext_resource path="res://asset/Enemy02/idle11.png" type="Texture" id=12]
[ext_resource path="res://asset/Enemy02/idle06.png" type="Texture" id=13]
[ext_resource path="res://asset/Enemy02/idle08.png" type="Texture" id=14]
[ext_resource path="res://asset/Enemy02/walk01.png" type="Texture" id=15]
[ext_resource path="res://asset/Enemy02/idle09.png" type="Texture" id=16]
[ext_resource path="res://asset/Enemy02/walk02.png" type="Texture" id=17]
[ext_resource path="res://asset/Enemy02/walk03.png" type="Texture" id=18]
[ext_resource path="res://asset/Enemy02/walk04.png" type="Texture" id=19]
[ext_resource path="res://src/actor/Enemy1.gd" type="Script" id=20]
[ext_resource path="res://asset/Enemy02/hit03.png" type="Texture" id=21]
[ext_resource path="res://asset/Enemy02/hit02.png" type="Texture" id=22]
[ext_resource path="res://asset/Enemy02/hit01.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ) ],
"loop": false,
"name": "hit",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "jalan",
"speed": 10.0
} ]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "hit" ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "mati"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 )
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 10 )

[node name="Enemy1" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 20 )
speed = Vector2( 50, 250 )
gravity = 100

[node name="musuh" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "hit"

[node name="Animation" type="AnimationPlayer" parent="musuh"]
anims/RESET = SubResource( 5 )
anims/mati = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="pivot" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="pivot"]
position = Vector2( 8, 16 )
scale = Vector2( 1, 0.5 )
enabled = true
collision_mask = 8
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.447059, 0.0666667, 0.0666667, 1 )
position = Vector2( 0, 8 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 2.38419e-07, 12 )
scale = Vector2( 0.7, 0.3 )
process_parent = true
physics_process_parent = true

[connection signal="animation_finished" from="musuh" to="." method="_on_musuh_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
